style.css
/* ... */
.back-to-top-float:hover {
    transform: scale(1.08);
    opacity: 0.9;
}

/* FOOTER */
footer {
    border-top: 1px solid var(--border);
    padding: 48px 0;
    text-align: center;
    font-size: 14px;
    color: var(--text);
}

/* MOBILE */
@media (max-width: 768px) {
    
    /* INDEX PAGE  */

    .hero {
        flex-direction: column;
        text-align: center;
        gap: 24px;
    }

    .hero h1 {
        font-size: 32px;
    }

    .hero-intro {
        font-size: 20px;
    }

    .grid {
        grid-template-columns: 1fr;
    }

    nav {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 12px;
        padding: 16px 18px;
        text-align: center;
        transition: transform 0.25s ease, opacity 0.25s ease;
    }

    .nav-links {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        gap: 16px;
        margin-left: 0;
    }

    .nav-links a {
        margin-left: 0;
    }

    nav.nav-hidden {
    transform: translateY(-140%);
    opacity: 0;
    pointer-events: none;
    }

    #projects {
        scroll-margin-top: 50px;
    }

    /* PROJECT PAGES */
    .project-hero h1 {
        font-size: 38px;
    }

    .meta-grid {
        grid-template-columns: repeat(2, 1fr);
    }

    /* Fixed gradient background */
    body {
        background-attachment: scroll;
    }

    /* #lightbox::after {
        display: none;
    } */
}

